--- a/testtask/baseapp/templates/baseapp/professions.html
+++ b/testtask/baseapp/templates/baseapp/professions.html
@@ -1,7 +1,11 @@
 {% extends "baseapp/base.html" %}
 {% block content%}
 {% for profession in professions %}
-    <li> {{profession}} </li>
+    <li>
+        {{profession}}
+        <a href="{% url 'baseapp:profession' profession.id%}"> изменить </a>
+        <a href="{% url 'baseapp:del_profession' profession.id%}"> удалить </a>
+    </li>
 {% endfor %}
 
 {% endblock content%}
