--- a/testtask/baseapp/templates/baseapp/base.html
+++ b/testtask/baseapp/templates/baseapp/base.html
@@ -14,6 +14,7 @@
         </div>
         <div>
         <a href="{% url 'baseapp:professions' %}">  Должности </a>
+            <a href="{% url 'baseapp:new_profession' %}"> Добавить должность  </a>
             <div>
 </nav>
 
