--- a/testtask/baseapp/templates/baseapp/del_profession.html
+++ b/testtask/baseapp/templates/baseapp/del_profession.html
@@ -9,4 +9,5 @@
     Вы точно хотите удалить должность {{profession}}?
     <button type="submit">Удалить</button>
 </form>
+{{sublabel}}
 {% endblock content %}
